erDiagram
  CUSTOMER ||--o{ ORDER : "sends/receives"
  ZONE ||--o{ HUB : contains
  ZONE ||--o{ ROUTE : "origin/dest"
  ZONE ||--o{ RATECARD : "origin/dest"
  ORDER ||--|{ PARCEL : contains
  ORDER }o--|| RATECARD : "priced by"
  PARCEL ||--o{ SCANEVENT : "tracked by"
  ROUTE ||--o{ PARCEL : "routed via"
  HUB ||--o{ LINEHAULTRIP : origin
  HUB ||--o{ LINEHAULTRIP : destination
  DRIVER ||--o{ LINEHAULTRIP : drives
  TRUCK ||--o{ LINEHAULTRIP : assigned
  COURIER ||--o{ SCANEVENT : records
  HUB ||--o{ SCANEVENT : "scanned at"
  SCANEVENT ||--o| DELIVERYPROOF : captures
  PARCEL ||--o{ DELIVERYPROOF : "proven by"
  ZONE ||--o{ COURIER : "operates in"
  CUSTOMER {
    uuid id PK
    string name_enc "PII encrypted"
    string phone_enc "PII encrypted"
    string address_enc "PII encrypted"
    string region_code "plain routing"
  }
  ORDER {
    uuid id PK
    uuid sender_id FK
    uuid recipient_id FK
    uuid rate_card_id FK
    int price_cents
    enum status "Active,Complete,Partially_Delivered,Lost,Damaged,Cancelled"
  }
  PARCEL {
    uuid id PK
    uuid order_id FK
    uuid route_id FK "nullable"
    int declared_weight_grams
    int actual_weight_grams "nullable, set at hub"
    enum type "parcel,pallet"
    enum direction "Forward,Reverse_RTS"
    enum state "Created,InHub,InTransit,OutForDelivery,Delivered,Misrouted,Lost,Damaged"
  }
  LINEHAULTRIP {
    uuid id PK
    uuid origin_hub_id FK
    uuid dest_hub_id FK
    uuid driver_id FK
    uuid truck_id FK
  }
  HUB {
    uuid id PK
    uuid zone_id FK
    string name
  }
  ZONE {
    uuid id PK
    string region_code "plain, routing"
  }
  ROUTE {
    uuid id PK
    uuid origin_zone_id FK
    uuid dest_zone_id FK
  }
  RATECARD {
    uuid id PK
    uuid origin_zone_id FK
    uuid dest_zone_id FK
    enum parcel_type
    int price_cents
  }
  COURIER {
    uuid id PK
    uuid zone_id FK
    enum role "RBAC"
  }
  DRIVER {
    uuid id PK
    string name_enc "PII encrypted"
  }
  TRUCK {
    uuid id PK
    string plate
  }
  SCANEVENT {
    uuid id PK
    uuid parcel_id FK
    uuid hub_id FK "nullable"
    uuid courier_id FK "nullable"
    enum event_type
    timestamp created_at "append-only"
  }
  DELIVERYPROOF {
    uuid id PK
    uuid scan_event_id FK
    uuid parcel_id FK
    string signature_url "nullable"
    string photo_url "nullable"
    int cod_collected_cents "nullable"
  }
